@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+8/1/12
+    - Added function margcost() for computing the marginal cost of
+      generation.
+
 7/20/12
     - Added utility function @opt_model/describe_idx() to indentify
       variable, constraint or cost row indices to aid in debugging.
